@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2012-12-07 Thomas Holder <thomas.holder@schrodinger.com>
+
+	* Fixed fab hydro argument
+
 2012-11-12 Thomas Holder <thomas.holder@schrodinger.com>
 
 	* Fixed #3539436: right justified resn in PDB
